--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,11 +24,6 @@ a:visited {
   }
 }
 
-a:visited {
-  color: inherit;
-
-}
-
 .main {
   max-width: 1200px;
 }
