--- a/scss/components/_typo.scss
+++ b/scss/components/_typo.scss
@@ -1,3 +1,9 @@
+h1,
+h1 a,
+h1 a:visited {
+  color: palette(black, light);
+}
+
 h2 {
   @extend %txt-shadow;
   font-family: $font-family--secondary;
